Base Api finish

--- a/ComicSeverNode_1/.env
+++ b/ComicSeverNode_1/.env
@@ -2,3 +2,8 @@ BASE_URL = "mongodb://127.0.0.1:27017/?compressors=zlib&gssapiServiceName=mongod
 DATA_NAME = "ComicDb"
 USER = 'User'
 COMIC = 'Comic'
+CHAPTER = 'Chapter'
+IMAGE ='Image'
+IMAGE_FILES = 'ImageChapter.files'
+IMAGE_CHUNK = 'ImageChapter.chunks'/
+MAIN_URL = 'http://localhost:3000
