--- a/ComicSeverNode_1/package.json
+++ b/ComicSeverNode_1/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "start": "node app"
+    "start": "nodemon app",
+    "dev": "SET NODE_ENV=DEV nodemon app"
   },
   "description": "ComicSeverNode_1",
   "author": {
@@ -13,11 +14,15 @@
   },
   "main": "app.js",
   "dependencies": {
+    "@types/express": "^4.0.37",
     "@types/mongodb": "^3.6.12",
     "debug": "^2.2.0",
     "dotenv": "^8.2.0",
-    "express": "^4.14.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
@@ -25,8 +30,11 @@
     "@types/express": "^4.0.37",
     "@types/express-serve-static-core": "^4.0.50",
     "@types/mime": "^1.3.1",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.7",
     "@types/serve-static": "^1.7.32",
+    "nodemon": "^2.0.7",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.0.5"
   }
 }
