updata all router

--- a/ComicSeverNode_1/package.json
+++ b/ComicSeverNode_1/package.json
@@ -1,7 +1,7 @@
 {
   "name": "comic-sever-node_1",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
@@ -16,6 +16,9 @@
   "dependencies": {
     "@types/express": "^4.0.37",
     "@types/mongodb": "^3.6.12",
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.9",
+    "cors": "^2.8.5",
     "debug": "^2.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -23,6 +26,7 @@
     "mongodb": "^3.6.6",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "passport": "^0.4.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
