--- a/ComicSeverNode_1/package.json
+++ b/ComicSeverNode_1/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
+    "mongoose": "^5.13.2",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "passport": "^0.4.1",
