--- a/ComicSeverNode_1/.env
+++ b/ComicSeverNode_1/.env
@@ -1,4 +1,4 @@
-BASE_URL = "mongodb://127.0.0.1:27017/?compressors=zlib&gssapiServiceName=mongodb"
+BASE_URL = "mongodb://127.0.0.1:27017/?compressors=disabled&gssapiServiceName=mongodb"
 DATA_NAME = "ComicDb"
 USER = 'User'
 COMIC = 'Comic'
