--- a/ComicSeverNode_1/package.json
+++ b/ComicSeverNode_1/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "start": "nodemon app",
-    "dev": "SET NODE_ENV=DEV nodemon app"
+    "start": "ts-node app.ts",
+    "dev":"nodemon app",
+    "dev-1": "SET NODE_ENV=DEV nodemon app"
   },
   "description": "ComicSeverNode_1",
   "author": {
@@ -22,6 +23,8 @@
     "debug": "^2.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "mongoose": "^5.13.2",
