Update Comment Api

--- a/ComicSeverNode_1/.env
+++ b/ComicSeverNode_1/.env
@@ -1,4 +1,4 @@
-BASE_URL = "mongodb://127.0.0.1:27017/?compressors=disabled&gssapiServiceName=mongodb"
+BASE_URL = "mongodb://127.0.0.1:27017/?compressors=zlib&gssapiServiceName=mongodb"
 DATA_NAME = "ComicDb"
 USER = 'User'
 COMIC = 'Comic'
@@ -6,4 +6,5 @@ CHAPTER = 'Chapter'
 IMAGE ='Image'
 IMAGE_FILES = 'ImageChapter.files'
 IMAGE_CHUNK = 'ImageChapter.chunks'/
+WEB_URL='http://localhost:3001'
 MAIN_URL = 'http://localhost:3000
