--- a/ComicSeverNode_1/docker-compose.dev.yml
+++ b/ComicSeverNode_1/docker-compose.dev.yml
@@ -8,8 +8,8 @@ services:
    - 3000:3000
    - 8000:8000
   environment:
-   - SERVER_PORT=8000
-   - CONNECTIONSTRING=mongodb://mongo:27017/notes
+   - SERVER_PORT=3000
+   - CONNECTIONSTRING=mongodb://0.0.0.0:27017/ComicDb
   volumes:
    - ./:/app
   command: yarn dev
@@ -20,6 +20,18 @@ services:
   volumes:
    - mongodb:/data/db
    - mongodb_config:/data/configdb
+ user:
+  build:
+   context: .
+  ports:
+  - 3000:4000
+  - 5000:5000
+  environment:
+  - SERVER_PORT=4000
+  - CONNECTIONSTRING=mongodb://0.0.0.0:27017/ComicDb
+  volumes:
+  - ./:/app
+  command: yarn dev
 volumes:
  mongodb:
  mongodb_config:
